Update alt text for project images

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             <h2>Projects</h2>
             <div class="projects">
                  <div class="project">
-                    <img src="photos/a1.png" alt="Screenshot of Flipping A Coin project">
+                    <img src="photos/a1.png" alt="Flipping A Coin project">
                     <div class="project-content">
                         <h3>Flipping A Coin</h3>
                         <p>A simple web application that simulates flipping multiple coins and displays the random results.</p>
@@ -431,7 +431,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                     </div>
                 </div>
                 <div class="project">
-                    <img src="photos/uninav.png" alt="Screenshot of Manipal UniNav Map project">
+                    <img src="photos/uninav.png" alt="Manipal UniNav Map project">
                     <div class="project-content">
                         <h3>Manipal UniNav Map</h3>
                         <p>An interactive map designed to help Manipal University Jaipur students navigate the campus easily.</p>
@@ -439,7 +439,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                     </div>
                 </div>
                 <div class="project">
-                    <img src="photos/s2.png" alt="Screenshot of Spin Roulette project">
+                    <img src="photos/s2.png" alt="Roulette project">
                     <div class="project-content">
                         <h3>Spin Roulette</h3>
                         <p>A web game where players spin a roulette wheel and try to guess the outcome, aiming for the fewest attempts.</p>
@@ -447,7 +447,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                     </div>
                 </div>
                 <div class="project">
-                    <img src="photos/s3.png" alt="Screenshot of Portfolio project">
+                    <img src="photos/s3.png" alt="Portfolio project">
                     <div class="project-content">
                         <h3>Personal Portfolio</h3>
                         <p>This website itself! A showcase of my skills, educational background, projects, and achievements.</p>
