--- a/index.html
+++ b/index.html
@@ -60,16 +60,14 @@ nav a:hover::after, nav a.active::after { width: 100%; }
 .hero { min-height: calc(100vh - 70px); display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; padding: 40px 20px; position: relative; }
 .hero h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 10px; color: var(--cyan-glow); text-shadow: 0 0 15px rgba(0, 229, 255, 0.6); }
 .hero h2 { font-size: 1.8rem; font-weight: 600; color: var(--cyan-glow); text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); margin-bottom: 20px; }
-.hero p { margin: 0 0 30px; font-size: 1.1rem; font-weight: 400; color: var(--text-light); max-width: 650px; line-height: 1.6; min-height: 1.6em; /* Reserve space */ }
+.hero p { margin: 0 0 30px; font-size: 1.1rem; font-weight: 400; color: var(--text-light); max-width: 650px; line-height: 1.6; min-height: 1.6em; }
 #typed-text {
     border-right: 3px solid var(--cyan-accent);
     animation: blink-caret 0.75s step-end infinite;
-    /* Allow wrapping if needed, adjust display */
-    display: inline; /* Changed from inline-block for better wrap with surrounding text if any */
+    display: inline; /* Or inline-block if spacing issues occur */
     vertical-align: bottom;
     color: var(--text-light);
     font-weight: 400;
-    /* word-break: break-all; /* If strict word-by-word causes overflow issues */
 }
 @keyframes blink-caret { from, to { border-color: transparent; } 50% { border-color: var(--cyan-accent); } }
 .hero button { padding: 10px 25px; background: var(--cyan-accent); color: var(--bg-dark); border: none; border-radius: 50px; font-size: 0.9rem; cursor: pointer; transition: transform var(--transition-speed), background-color var(--transition-speed), box-shadow var(--transition-speed); font-weight: 600; box-shadow: 0 4px 15px rgba(0, 184, 212, 0.3); }
@@ -89,37 +87,40 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .certificate-viewer {
     margin-top: 0; display: flex; justify-content: center; align-items: center; position: relative;
     border: 1px solid transparent; border-radius: 10px; background: transparent; padding: 0; overflow: hidden;
-    transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease; min-height: 0; /* Allows collapsing */
+    transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease; min-height: 0;
 }
-.certificate-viewer:has(> .active) { /* Styles when a cert is showing */
+.certificate-viewer:has(> .active) {
     border-color: var(--charcoal); background: rgba(17, 17, 22, 0.4); padding: 15px; margin-top: 30px;
 }
 /* Hide initially & base positioning */
 .certificate-viewer > img,
 .certificate-viewer > #java-cert {
-    opacity: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0.9); transition: opacity 0.5s ease, transform 0.5s ease; pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; /* Ensure natural aspect ratio */ height: auto;
+    opacity: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0.9); transition: opacity 0.5s ease, transform 0.5s ease; pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; height: auto;
 }
 /* Show active */
 .certificate-viewer > .active {
-    opacity: 1; pointer-events: auto; position: relative; /* Takes space */ top: auto; left: auto; display: block; transform: scale(1); transition: opacity 0.5s ease, transform 0.5s ease;
+    opacity: 1; pointer-events: auto; position: relative; /* Takes space */ top: auto; left: auto; display: block; transform: scale(1); transition: opacity 0.5s ease, transform 0.5s ease; max-width: 100%;
     /* Reset absolute centering */
     transform: none;
 }
-.certificate-viewer > img.active { max-height: 450px; margin: 10px auto; } /* Size for single image */
-.certificate-viewer #java-cert.active { /* Styles for Java div when active */
+.certificate-viewer > img.active { max-height: 450px; margin: 10px auto; }
+.certificate-viewer #java-cert.active {
     display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; width: 100%; margin: 10px 0;
-    /* Reset absolute positioning */
-    position: relative; top: auto; left: auto; transform: none;
+    /* Ensure it overrides absolute */
+    position: relative; top: auto; left: auto; transform: none; opacity: 1; pointer-events: auto;
 }
-.certificate-viewer #java-cert.active img { /* Size for images inside Java div */
-     max-height: 400px; max-width: 45%; /* Allows side-by-side */ object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-     position: static; /* Important for flex layout */
-     opacity: 1; transform: none; pointer-events: auto; /* Ensure they behave normally */
+.certificate-viewer #java-cert.active img {
+    max-height: 400px; max-width: 45%; object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4); position: static; /* Let flex layout work */
 }
 
 /* --- Projects Section --- */
-.projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; }
-.project { background: var(--bg-medium); border-radius: 10px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5); overflow: hidden; transition: transform var(--transition-speed) ease-out, box-shadow var(--transition-speed) ease-out; border: 1px solid var(--charcoal); display: flex; flex-direction: column; }
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 25px;
+    justify-items: center; /* Center items horizontally */
+}
+.project { background: var(--bg-medium); border-radius: 10px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5); overflow: hidden; transition: transform var(--transition-speed) ease-out, box-shadow var(--transition-speed) ease-out; border: 1px solid var(--charcoal); display: flex; flex-direction: column; width: 100%; /* Ensure project takes cell width */ max-width: 400px; /* Optional max width */ }
 .project:hover { transform: translateY(-8px); box-shadow: 0 12px 30px rgba(0, 0, 0, 0.7); }
 .project img { width: 100%; height: 200px; object-fit: cover; display: block; border-bottom: 1px solid var(--charcoal); }
 .project-content { padding: 20px; flex-grow: 1; display: flex; flex-direction: column; }
@@ -173,7 +174,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .contact-form button:hover { transform: translateY(-3px); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); background-color: var(--cyan-glow); }
 .social-links { margin-top: 30px; display: flex; justify-content: center; gap: 25px; }
 .social-btn {
-    width: 50px; height: 50px; /* ** Increased Size ** */
+    width: 50px; height: 50px; /* ** Restored Size ** */
     background: rgba(255, 255, 255, 0.05); border: 1px solid var(--charcoal); box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4); border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: transform var(--transition-speed), box-shadow var(--transition-speed), border-color var(--transition-speed), background-color var(--transition-speed); overflow: hidden;
 }
 .social-btn img {
@@ -401,8 +402,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                 <img id="genai-cert" src="photos/genai.png" alt="Intro to GenAI Certificate">
                 <img id="sql-cert" src="photos/sqlcert.png" alt="SQL Certificate">
                 <img id="python-cert" src="photos/pythoncert.png" alt="Python Certificate">
-                <div id="java-cert" class="java-certificates">
-                    <img src="photos/javacert.png" alt="Java Certificate">
+                <div id="java-cert" class="java-certificates"> <img src="photos/javacert.png" alt="Java Certificate">
                     <img src="photos/jvcert.png" alt="Advanced Java Certificate">
                 </div>
             </div>
@@ -499,39 +499,41 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
         </footer>
     </div> <script>
         document.addEventListener("DOMContentLoaded", () => {
-            // Typing effect logic - WORD BY WORD
+            // Typing effect logic - WORD BY WORD (Corrected)
             const typedTextElement = document.getElementById("typed-text");
             const textToType = "Curious developer passionate about building projects and learning new technologies!";
             const wordsToType = textToType.split(' ');
             let wordIndex = 0;
             const wordTypingSpeed = 200; // Delay between words (ms)
+            let currentText = ''; // Variable to build the text
 
             function typeWordByWord() {
                 if (typedTextElement && wordIndex < wordsToType.length) {
-                    typedTextElement.textContent += wordsToType[wordIndex] + ' ';
+                    currentText += wordsToType[wordIndex] + ' '; // Add word and space to the current text
+                    typedTextElement.textContent = currentText; // Update the element content
                     wordIndex++;
                     // Only set timeout if there are more words
                     if (wordIndex < wordsToType.length) {
                         setTimeout(typeWordByWord, wordTypingSpeed);
                     } else {
                         // Typing finished: stop blinking caret
-                        typedTextElement.style.borderRightColor = 'var(--cyan-accent)';
+                        typedTextElement.style.borderRightColor = 'transparent'; // Make cursor invisible
                         typedTextElement.style.animation = 'none';
                     }
                 }
             }
 
-            // Particles.js configuration - WITH INTERACTIVITY & Increased Visibility
+            // Particles.js configuration - Increased Visibility & Interactivity
             if (typeof particlesJS !== 'undefined') {
                 particlesJS("particles-js", {
                     particles: {
-                        number: { value: 70, density: { enable: true, value_area: 800 } },
+                        number: { value: 80, density: { enable: true, value_area: 800 } },
                         color: { value: "#ffffff" },
                         shape: { type: "circle" },
-                        opacity: { value: 0.5, random: true, anim: { enable: true, speed: 0.6, opacity_min: 0.15, sync: false } }, // Increased base opacity
+                        opacity: { value: 0.5, random: true, anim: { enable: true, speed: 0.6, opacity_min: 0.15, sync: false } },
                         size: { value: 2.5, random: true, anim: { enable: false } },
                         line_linked: {
-                            enable: true, distance: 140, color: "var(--cyan-accent)", opacity: 0.5, width: 1 // Increased line opacity
+                            enable: true, distance: 130, color: "var(--cyan-accent)", opacity: 0.5, width: 1 // Increased line opacity
                         },
                         move: { enable: true, speed: 1.5, direction: "none", random: true, straight: false, out_mode: "out", bounce: false, attract: { enable: false } }
                     },
@@ -543,7 +545,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                             resize: true
                         },
                         modes: {
-                            grab: { distance: 130, line_linked: { opacity: 0.8 } }, // Make grabbed lines more visible
+                            grab: { distance: 140, line_linked: { opacity: 0.85 } }, // Brighter grabbed lines
                             bubble: {}, repulse: {}, push: {}, remove: {}
                         }
                     },
@@ -554,6 +556,9 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             // Start typing effect
             if (typedTextElement) {
                 typedTextElement.textContent = ''; // Clear initial text
+                // Ensure caret is visible initially
+                typedTextElement.style.borderRight = '3px solid var(--cyan-accent)';
+                typedTextElement.style.animation = 'blink-caret 0.75s step-end infinite';
                 typeWordByWord(); // Start word-by-word typing
             }
 
@@ -576,10 +581,8 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
 
             const isAlreadyActive = clickedCert.classList.contains("active");
 
-            // Deactivate all certificates first
             allCerts.forEach(cert => { cert.classList.remove("active"); });
 
-            // If the clicked one wasn't active, activate it now
             if (!isAlreadyActive) { clickedCert.classList.add("active"); }
         }
 
