--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ html { scroll-behavior: smooth; }
 body { color: var(--text-light); background-color: var(--bg-dark); overflow-x: hidden; position: relative; }
 
 /* --- Background Elements --- */
-#grid-bg, #particles-js { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
-#grid-bg { background-size: 50px 50px; background-image: linear-gradient(to right, rgba(42, 42, 53, 0.4) 1px, transparent 1px), linear-gradient(to bottom, rgba(42, 42, 53, 0.4) 1px, transparent 1px); opacity: 0.15; animation: grid-pulse 15s ease-in-out infinite alternate; z-index: -2; }
-@keyframes grid-pulse { 0% { opacity: 0.1; } 50% { opacity: 0.2; } 100% { opacity: 0.1; } }
-#particles-js { z-index: -1; pointer-events: auto; /* Enable mouse interaction */ }
+/* Removed #grid-bg */
+#particles-js {
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; /* Make particles non-interactive by default */ z-index: -1; /* Keep behind content */
+}
 
 /* Main Content Wrapper */
 #content { min-height: 100vh; padding-top: 70px; position: relative; z-index: 1; overflow-x: hidden; }
@@ -60,15 +60,8 @@ nav a:hover::after, nav a.active::after { width: 100%; }
 .hero { min-height: calc(100vh - 70px); display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; padding: 40px 20px; position: relative; }
 .hero h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 10px; color: var(--cyan-glow); text-shadow: 0 0 15px rgba(0, 229, 255, 0.6); }
 .hero h2 { font-size: 1.8rem; font-weight: 600; color: var(--cyan-glow); text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); margin-bottom: 20px; }
-.hero p { margin: 0 0 30px; font-size: 1.1rem; font-weight: 400; color: var(--text-light); max-width: 650px; line-height: 1.6; min-height: 1.6em; }
-#typed-text {
-    border-right: 3px solid var(--cyan-accent);
-    animation: blink-caret 0.75s step-end infinite;
-    display: inline; /* Or inline-block if spacing issues occur */
-    vertical-align: bottom;
-    color: var(--text-light);
-    font-weight: 400;
-}
+.hero p { margin: 0 0 30px; font-size: 1.1rem; font-weight: 400; color: var(--text-light); max-width: 650px; line-height: 1.6; min-height: 1.6em; /* Reserve space */ }
+#typed-text { border-right: 3px solid var(--cyan-accent); animation: blink-caret 0.75s step-end infinite; display: inline; vertical-align: bottom; color: var(--text-light); font-weight: 400; }
 @keyframes blink-caret { from, to { border-color: transparent; } 50% { border-color: var(--cyan-accent); } }
 .hero button { padding: 10px 25px; background: var(--cyan-accent); color: var(--bg-dark); border: none; border-radius: 50px; font-size: 0.9rem; cursor: pointer; transition: transform var(--transition-speed), background-color var(--transition-speed), box-shadow var(--transition-speed); font-weight: 600; box-shadow: 0 4px 15px rgba(0, 184, 212, 0.3); }
 .hero button:hover { transform: translateY(-3px) scale(1.03); background: var(--cyan-glow); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); }
@@ -84,43 +77,30 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 
 /* --- Certificates Section --- */
 #certificates p { text-align:center; margin-bottom: 25px; color: var(--text-medium); font-size: 0.95rem;}
-.certificate-viewer {
-    margin-top: 0; display: flex; justify-content: center; align-items: center; position: relative;
-    border: 1px solid transparent; border-radius: 10px; background: transparent; padding: 0; overflow: hidden;
-    transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease; min-height: 0;
-}
-.certificate-viewer:has(> .active) {
-    border-color: var(--charcoal); background: rgba(17, 17, 22, 0.4); padding: 15px; margin-top: 30px;
-}
+.certificate-viewer { margin-top: 0; display: flex; justify-content: center; align-items: center; position: relative; border: 1px solid transparent; border-radius: 10px; background: transparent; padding: 0; overflow: hidden; transition: padding 0.5s ease, background-color 0.5s ease, border-color 0.5s ease, margin-top 0.5s ease; min-height: 0; }
+.certificate-viewer:has(> .active) { border-color: var(--charcoal); background: rgba(17, 17, 22, 0.4); padding: 15px; margin-top: 30px; }
 /* Hide initially & base positioning */
 .certificate-viewer > img,
 .certificate-viewer > #java-cert {
-    opacity: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0.9); transition: opacity 0.5s ease, transform 0.5s ease; pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; height: auto;
+    opacity: 0; position: absolute; top: 50%; left: 50%;
+    transform: translate(-50%, -50%); /* Only translate for centering */
+    transition: opacity 0.5s ease; /* ** Changed: Only transition opacity ** */
+    pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; height: auto;
 }
 /* Show active */
 .certificate-viewer > .active {
-    opacity: 1; pointer-events: auto; position: relative; /* Takes space */ top: auto; left: auto; display: block; transform: scale(1); transition: opacity 0.5s ease, transform 0.5s ease; max-width: 100%;
-    /* Reset absolute centering */
-    transform: none;
+    opacity: 1; /* Fade in */
+    pointer-events: auto; position: relative; /* Takes space */ top: auto; left: auto; display: block;
+    transform: none; /* Reset transform */
+    /* transition added above applies */
 }
 .certificate-viewer > img.active { max-height: 450px; margin: 10px auto; }
-.certificate-viewer #java-cert.active {
-    display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; width: 100%; margin: 10px 0;
-    /* Ensure it overrides absolute */
-    position: relative; top: auto; left: auto; transform: none; opacity: 1; pointer-events: auto;
-}
-.certificate-viewer #java-cert.active img {
-    max-height: 400px; max-width: 45%; object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4); position: static; /* Let flex layout work */
-}
+.certificate-viewer #java-cert.active { display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; width: 100%; margin: 10px 0; position: relative; top: auto; left: auto; transform: none; opacity: 1; pointer-events: auto; }
+.certificate-viewer #java-cert.active img { max-height: 400px; max-width: 45%; object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4); position: static; }
 
 /* --- Projects Section --- */
-.projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 25px;
-    justify-items: center; /* Center items horizontally */
-}
-.project { background: var(--bg-medium); border-radius: 10px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5); overflow: hidden; transition: transform var(--transition-speed) ease-out, box-shadow var(--transition-speed) ease-out; border: 1px solid var(--charcoal); display: flex; flex-direction: column; width: 100%; /* Ensure project takes cell width */ max-width: 400px; /* Optional max width */ }
+.projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; justify-items: center; /* Center items */ }
+.project { background: var(--bg-medium); border-radius: 10px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5); overflow: hidden; transition: transform var(--transition-speed) ease-out, box-shadow var(--transition-speed) ease-out; border: 1px solid var(--charcoal); display: flex; flex-direction: column; width: 100%; max-width: 400px; }
 .project:hover { transform: translateY(-8px); box-shadow: 0 12px 30px rgba(0, 0, 0, 0.7); }
 .project img { width: 100%; height: 200px; object-fit: cover; display: block; border-bottom: 1px solid var(--charcoal); }
 .project-content { padding: 20px; flex-grow: 1; display: flex; flex-direction: column; }
@@ -173,15 +153,8 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 .contact-form button { width: 100%; padding: 13px; font-size: 1rem; background: var(--cyan-accent); border: none; border-radius: 8px; font-weight: 600; cursor: pointer; transition: transform var(--transition-speed), box-shadow var(--transition-speed), background-color var(--transition-speed); color: var(--bg-dark); margin-top: 10px; box-shadow: 0 4px 15px rgba(0, 184, 212, 0.3); }
 .contact-form button:hover { transform: translateY(-3px); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); background-color: var(--cyan-glow); }
 .social-links { margin-top: 30px; display: flex; justify-content: center; gap: 25px; }
-.social-btn {
-    width: 50px; height: 50px; /* ** Restored Size ** */
-    background: rgba(255, 255, 255, 0.05); border: 1px solid var(--charcoal); box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4); border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: transform var(--transition-speed), box-shadow var(--transition-speed), border-color var(--transition-speed), background-color var(--transition-speed); overflow: hidden;
-}
-.social-btn img {
-    width: 100%; height: 100%; /* ** Fill Button ** */
-    object-fit: cover; /* ** Cover Area ** */
-    display: block; transition: transform 0.3s ease;
-}
+.social-btn { width: 50px; height: 50px; background: rgba(255, 255, 255, 0.05); border: 1px solid var(--charcoal); box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4); border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: transform var(--transition-speed), box-shadow var(--transition-speed), border-color var(--transition-speed), background-color var(--transition-speed); overflow: hidden; }
+.social-btn img { width: 100%; height: 100%; object-fit: cover; display: block; transition: transform 0.3s ease; }
 .social-btn:hover { transform: translateY(-4px) scale(1.1); box-shadow: 0 6px 15px rgba(0, 229, 255, 0.4); border-color: var(--cyan-accent); background: rgba(0, 184, 212, 0.1); }
 .social-btn:hover img { transform: scale(1.1); }
 
@@ -234,7 +207,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
     .close-resume-viewer { font-size: 40px; top: 15px; right: 20px; }
 
     .contact-container { padding: 25px 20px; }
-    .social-btn { width: 45px; height: 45px; } /* Adjust size */
+    .social-btn { width: 45px; height: 45px; }
     .social-links { gap: 18px; }
 }
 
@@ -275,16 +248,13 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
     .contact-form button { padding: 12px; font-size: 0.95rem; }
 
     .social-links { gap: 15px; margin-top: 25px; }
-    .social-btn { width: 42px; height: 42px; } /* Adjust size */
+    .social-btn { width: 42px; height: 42px; }
 }
     </style>
 </head>
 
 <body>
-    <div id="grid-bg"></div>
-    <div id="particles-js"></div>
-
-    <audio id="bg-music" loop>
+    <div id="particles-js"></div> <audio id="bg-music" loop>
         <source src="Interstellar Cornfield Chase (PenduJatt.Com.Se).mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
@@ -402,7 +372,8 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                 <img id="genai-cert" src="photos/genai.png" alt="Intro to GenAI Certificate">
                 <img id="sql-cert" src="photos/sqlcert.png" alt="SQL Certificate">
                 <img id="python-cert" src="photos/pythoncert.png" alt="Python Certificate">
-                <div id="java-cert" class="java-certificates"> <img src="photos/javacert.png" alt="Java Certificate">
+                <div id="java-cert" class="java-certificates">
+                    <img src="photos/javacert.png" alt="Java Certificate">
                     <img src="photos/jvcert.png" alt="Advanced Java Certificate">
                 </div>
             </div>
@@ -509,45 +480,38 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
 
             function typeWordByWord() {
                 if (typedTextElement && wordIndex < wordsToType.length) {
-                    currentText += wordsToType[wordIndex] + ' '; // Add word and space to the current text
-                    typedTextElement.textContent = currentText; // Update the element content
+                    currentText += wordsToType[wordIndex] + ' '; // Add word and space
+                    typedTextElement.textContent = currentText; // Update content
                     wordIndex++;
-                    // Only set timeout if there are more words
                     if (wordIndex < wordsToType.length) {
                         setTimeout(typeWordByWord, wordTypingSpeed);
                     } else {
-                        // Typing finished: stop blinking caret
-                        typedTextElement.style.borderRightColor = 'transparent'; // Make cursor invisible
-                        typedTextElement.style.animation = 'none';
+                        // Typing finished
+                        typedTextElement.style.borderRightColor = 'transparent'; // Hide cursor
+                        typedTextElement.style.animation = 'none'; // Stop blinking
                     }
                 }
             }
 
-            // Particles.js configuration - Increased Visibility & Interactivity
+            // Particles.js configuration - Starfield Effect
             if (typeof particlesJS !== 'undefined') {
                 particlesJS("particles-js", {
                     particles: {
-                        number: { value: 80, density: { enable: true, value_area: 800 } },
+                        number: { value: 200, density: { enable: true, value_area: 800 } }, // More stars
                         color: { value: "#ffffff" },
-                        shape: { type: "circle" },
-                        opacity: { value: 0.5, random: true, anim: { enable: true, speed: 0.6, opacity_min: 0.15, sync: false } },
-                        size: { value: 2.5, random: true, anim: { enable: false } },
-                        line_linked: {
-                            enable: true, distance: 130, color: "var(--cyan-accent)", opacity: 0.5, width: 1 // Increased line opacity
-                        },
-                        move: { enable: true, speed: 1.5, direction: "none", random: true, straight: false, out_mode: "out", bounce: false, attract: { enable: false } }
-                    },
-                    interactivity: {
-                        detect_on: "canvas",
-                        events: {
-                            onhover: { enable: true, mode: "grab" }, // Grab lines on hover
-                            onclick: { enable: false },
-                            resize: true
-                        },
-                        modes: {
-                            grab: { distance: 140, line_linked: { opacity: 0.85 } }, // Brighter grabbed lines
-                            bubble: {}, repulse: {}, push: {}, remove: {}
+                        shape: { type: "circle" }, // Stars are circles
+                        opacity: { value: 0.8, random: true, anim: { enable: true, speed: 0.5, opacity_min: 0.1, sync: false } }, // Twinkling effect
+                        size: { value: 1.5, random: true, anim: { enable: false } }, // Small stars
+                        line_linked: { enable: false }, // NO lines between stars
+                        move: {
+                            enable: true, speed: 0.3, direction: "none", random: true, // Slow drift
+                            straight: false, out_mode: "out", bounce: false, attract: { enable: false }
                         }
+                    },
+                    interactivity: { // Keep interactivity minimal for stars
+                        detect_on: "canvas",
+                        events: { onhover: { enable: false }, onclick: { enable: false }, resize: true }, // Disable hover/click
+                        modes: { grab: {}, bubble: {}, repulse: {}, push: {}, remove: {} }
                     },
                     retina_detect: true
                 });
@@ -559,7 +523,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                 // Ensure caret is visible initially
                 typedTextElement.style.borderRight = '3px solid var(--cyan-accent)';
                 typedTextElement.style.animation = 'blink-caret 0.75s step-end infinite';
-                typeWordByWord(); // Start word-by-word typing
+                typeWordByWord(); // Start typing
             }
 
             // Background music
@@ -580,10 +544,8 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             if (!clickedCert) return;
 
             const isAlreadyActive = clickedCert.classList.contains("active");
-
-            allCerts.forEach(cert => { cert.classList.remove("active"); });
-
-            if (!isAlreadyActive) { clickedCert.classList.add("active"); }
+            allCerts.forEach(cert => { cert.classList.remove("active"); }); // Deactivate all
+            if (!isAlreadyActive) { clickedCert.classList.add("active"); } // Activate if it wasn't active
         }
 
         // Form submission
