--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 }
 /* Images inside Java container */
 .certificate-viewer #java-cert.active img {
-    max-height: 400px; /* Slightly smaller to fit side-by-side */
+    max-height: 350px; /* ** This was 400px ** */
     max-width: 45%; /* Allows side-by-side */
     width: auto; height: auto; /* Maintain aspect ratio */
     object-fit: contain; border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
