--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ html { scroll-behavior: smooth; }
 body { color: var(--text-light); background-color: var(--bg-dark); overflow-x: hidden; position: relative; }
 
 /* --- Background Elements --- */
-/* Removed #grid-bg styling */
 #particles-js { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: -1; } /* Starfield background */
 
 /* Main Content Wrapper */
@@ -59,7 +58,7 @@ nav a:hover::after, nav a.active::after { width: 100%; }
 .hero h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 10px; color: var(--cyan-glow); text-shadow: 0 0 15px rgba(0, 229, 255, 0.6); }
 .hero h2 { font-size: 1.8rem; font-weight: 600; color: var(--cyan-glow); text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); margin-bottom: 20px; }
 .hero p { margin: 0 0 30px; font-size: 1.1rem; font-weight: 400; color: var(--text-light); max-width: 650px; line-height: 1.6; min-height: 1.6em; }
-#typed-text { border-right: 3px solid var(--cyan-accent); animation: blink-caret 0.75s step-end infinite; display: inline; vertical-align: bottom; color: var(--text-light); font-weight: 400; min-height: 1.6em; /* Ensure consistent height */ }
+#typed-text { border-right: 3px solid var(--cyan-accent); animation: blink-caret 0.75s step-end infinite; display: inline; vertical-align: bottom; color: var(--text-light); font-weight: 400; min-height: 1.6em; }
 @keyframes blink-caret { from, to { border-color: transparent; } 50% { border-color: var(--cyan-accent); } }
 .hero button { padding: 10px 25px; background: var(--cyan-accent); color: var(--bg-dark); border: none; border-radius: 50px; font-size: 0.9rem; cursor: pointer; transition: transform var(--transition-speed), background-color var(--transition-speed), box-shadow var(--transition-speed); font-weight: 600; box-shadow: 0 4px 15px rgba(0, 184, 212, 0.3); }
 .hero button:hover { transform: translateY(-3px) scale(1.03); background: var(--cyan-glow); box-shadow: 0 7px 20px rgba(0, 229, 255, 0.5); }
@@ -80,10 +79,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 /* Hide initially & base positioning */
 .certificate-viewer > img,
 .certificate-viewer > #java-cert {
-    opacity: 0; position: absolute; top: 50%; left: 50%;
-    transform: translate(-50%, -50%); /* Center using transform ONLY */
-    transition: opacity 0.5s ease; /* ** Only transition opacity for fade ** */
-    pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; height: auto;
+    opacity: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: opacity 0.5s ease; pointer-events: none; max-width: calc(100% - 30px); max-height: calc(100% - 30px); width: auto; height: auto;
 }
 /* Show active */
 .certificate-viewer > .active {
@@ -91,7 +87,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 }
 /* Consistent sizing for ALL active elements */
 .certificate-viewer > img.active,
-.certificate-viewer #java-cert.active {
+.certificate-viewer > #java-cert.active {
     max-height: 450px; /* ** Unified max height ** */
     width: auto; margin: 10px auto;
 }
@@ -106,7 +102,7 @@ h2 { margin-bottom: 35px; text-align: center; font-size: 2.2rem; font-weight: 60
 }
 
 /* --- Projects Section --- */
-.projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; justify-items: center; /* Center items within their grid cell */ }
+.projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; justify-items: center; /* Center items */ }
 .project { background: var(--bg-medium); border-radius: 10px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5); overflow: hidden; transition: transform var(--transition-speed) ease-out, box-shadow var(--transition-speed) ease-out; border: 1px solid var(--charcoal); display: flex; flex-direction: column; width: 100%; max-width: 400px; }
 .project:hover { transform: translateY(-8px); box-shadow: 0 12px 30px rgba(0, 0, 0, 0.7); }
 .project img { width: 100%; height: 200px; object-fit: cover; display: block; border-bottom: 1px solid var(--charcoal); }
@@ -484,15 +480,14 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             const typingSpeed = 80; // Delay between letters (ms)
 
             function typeLetterByLetter() {
-                // Check if element exists before proceeding
-                if (!typedTextElement) return;
+                if (!typedTextElement) return; // Exit if element not found
 
                 if (charIndex < textToType.length) {
                     typedTextElement.textContent += textToType.charAt(charIndex);
                     charIndex++;
                     setTimeout(typeLetterByLetter, typingSpeed);
                 } else {
-                    // Typing finished: stop blinking caret by making border transparent
+                    // Typing finished: make cursor invisible
                     typedTextElement.style.borderRightColor = 'transparent';
                     typedTextElement.style.animation = 'none'; // Stop animation explicitly
                 }
@@ -502,18 +497,18 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             if (typeof particlesJS !== 'undefined') {
                 particlesJS("particles-js", {
                     particles: {
-                        number: { value: 250, density: { enable: true, value_area: 800 } },
+                        number: { value: 250, density: { enable: true, value_area: 800 } }, // More stars
                         color: { value: "#ffffff" },
                         shape: { type: "circle" },
-                        opacity: { value: 0.8, random: true, anim: { enable: true, speed: 0.8, opacity_min: 0.1, sync: false } },
-                        size: { value: 1.5, random: true, anim: { enable: false } },
-                        line_linked: { enable: false }, // No lines
+                        opacity: { value: 0.8, random: true, anim: { enable: true, speed: 0.8, opacity_min: 0.1, sync: false } }, // Twinkle
+                        size: { value: 1.5, random: true, anim: { enable: false } }, // Small stars
+                        line_linked: { enable: false }, // NO lines
                         move: {
-                            enable: true, speed: 0.4, direction: "none", random: true,
+                            enable: true, speed: 0.4, direction: "none", random: true, // Slow drift
                             straight: false, out_mode: "out", bounce: false, attract: { enable: false }
                         }
                     },
-                    interactivity: { // Minimal/No interactivity for starfield
+                    interactivity: { // Minimal interactivity
                         detect_on: "canvas",
                         events: { onhover: { enable: false }, onclick: { enable: false }, resize: true },
                         modes: { grab: {}, bubble: {}, repulse: {}, push: {}, remove: {} }
@@ -524,9 +519,9 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
 
             // Start typing effect
             if (typedTextElement) {
-                typedTextElement.textContent = ''; // Clear previous text
-                charIndex = 0; // Reset index
-                // Reset caret style before starting
+                typedTextElement.textContent = ''; // Clear before starting
+                charIndex = 0; // Reset index for potential refreshes
+                // Ensure caret is visible initially
                 typedTextElement.style.borderRight = '3px solid var(--cyan-accent)';
                 typedTextElement.style.animation = 'blink-caret 0.75s step-end infinite';
                 typeLetterByLetter(); // Start typing
@@ -550,8 +545,8 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
             if (!clickedCert) return;
 
             const isAlreadyActive = clickedCert.classList.contains("active");
-            allCerts.forEach(cert => { cert.classList.remove("active"); }); // Deactivate all
-            if (!isAlreadyActive) { clickedCert.classList.add("active"); } // Activate if it wasn't active
+            allCerts.forEach(cert => { cert.classList.remove("active"); });
+            if (!isAlreadyActive) { clickedCert.classList.add("active"); }
         }
 
         // Form submission
