--- a/index.html
+++ b/index.html
@@ -426,8 +426,11 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                 <div class="skill">JavaScript</div>
                 <div class="skill">Java</div>
                 <div class="skill">C++</div>
-                <div class="skill">SQL</div>
+                <div class="skill">MySQL</div>
                 <div class="skill">Python</div>
+                <div class="skill">Flask</div>
+                <div class="skill">C</div>
+                <div class="skill">Git</div>
                 </div>
         </section>
 
@@ -470,6 +473,14 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                         <h3>Manipal UniNav Map</h3>
                         <p>An interactive map designed to help Manipal University Jaipur students navigate the campus easily.</p>
                         <a href="https://mujnavigator.netlify.app" target="_blank" rel="noopener noreferrer">View Project</a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="photos/s4.png" alt="Veritas - AI Clinical Chatbot">
+                    <div class="project-content">
+                        <h3>Veritas - The Clinical Pre-Consultancy Chatbot</h3>
+                        <p>A chatbot made for people who want to know how to treat their symptoms before visiting the doctor.</p>
+                        <a href="https://veritasbot.netlify.app" target="_blank" rel="noopener noreferrer">View Project</a>
                     </div>
                 </div>
                 <div class="project">
