--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@ footer { background: #08080b; padding: 20px; text-align: center; margin-top: 50p
                 <div id="java-cert" class="java-certificates">
                     <img src="photos/javacert.png" alt="Java Certificate">
                     <img src="photos/jvcert.png" alt="Advanced Java Certificate">
+                    <img src="photos/jvoops.png" alt="Object-Oriented Java Certificate">
                 </div>
             </div>
         </section>
